delete: check constraints
